[package]
name = "tanks"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"
bevy_xpbd_3d = "0.4.2"
cfg-if = "1.0.0"
leafwing-input-manager = "0.13.3"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# [target.x86_64-unknown-linux-gnu]
# linker = "clang"
# rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

